[metadata]
name = alpyro
version = 0.0.1
description = Alternative ROS client library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rho2/alpyro
author = Robin Brase
author_email = git@rho2.eu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    typing-extensions>=3.7.4.2
    aiohttp>=3.6.2
    alpyro-msgs>=0.1.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*